<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#DFE6F4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:rotationX="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="-200dp"
                android:background="@drawable/halfcircle"
                android:gravity="bottom"
                android:orientation="vertical"
                android:textAlignment="center"
                tools:ignore="RtlCompat,UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-100dp"
                    android:text="@string/register_with_us"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"

                    />



            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <EditText
                style="@style/inputdesignstyle"
                android:id="@+id/fname"
                android:autofillHints=""
                android:hint="@string/enter_your_first_name"
                android:inputType="text"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/lname"
                style="@style/inputdesignstyle"


                android:inputType="text"
                android:hint="@string/enter_your_last_name" />
            <EditText
                android:id="@+id/email"
                style="@style/inputdesignstyle"


                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email_id" />
            <EditText
                android:id="@+id/mobile"
                style="@style/inputdesignstyle"


                android:inputType="number"
                android:hint="+91_____" />
            <EditText
                android:id="@+id/password"
                style="@style/inputdesignstyle"


                android:inputType="textPassword"
                android:hint="@string/create_password" />



            <Button
                android:id="@+id/createaccountbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign up "
                android:padding="15dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>